# mini-hooks

./: Cargo.toml  README.md
.circleci/: config.yml
src/: lib.rs  main.rs
src/applications/: mod.rs  plex_webhook.rs
src/models/: mod.rs
src/services/: mod.rs  telegram_bot.rs
